--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,10 +23,12 @@
     <string name="location_permission_rational">Location services is required to find bus stops near your location.</string>
     <string name="location_permission_denied">This app uses location services to find bus stops near your location. If the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'PegCityTransit\'.</string>
 
+    <!-- Bottom Tabs -->
+    <string name="stops">Stops</string>
+    <string name="timetables">Timetables</string>
+    <string name="routes">Routes</string>
+
     <!--    UI Labels   -->
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="action_settings">Settings</string>
     <string name="generic_error">Sorry. An error occurred.</string>
     <string name="list_load_error_message">Sorry. An error occurred.</string>
     <string name="list_no_results_message">Sorry. We couldn\'t find any results.</string>
