--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <!--    Permissions    -->
     <string name="location_permission_dialog_title">Allow access to this device\'s location?</string>
     <string name="location_permission_rational">Location services is required to find bus stops near your location.</string>
-    <string name="location_permission_denied">This app uses location services to find bus stops near your location. If the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'PegCityTransit\'.</string>
+    <string name="location_permission_denied">This app uses location services to find bus stops near your location. If the permission has been permanently denied, it can be enabled from System Settings &gt; Apps &gt; \'PegCityTransit\'.</string>
 
     <!-- Bottom Tabs -->
     <string name="stops">Stops</string>
@@ -30,6 +30,7 @@
 
     <!--    UI Labels   -->
     <string name="generic_error">Sorry. An error occurred.</string>
+    <string name="no_bus_stops_in_that_area">Sorry. There are no bus stops in that area.</string>
     <string name="try_again">Try Again</string>
 
 </resources>
