* Added blank bus schedule activity and fragment. * Added AppRouter module * Added some TODOs in the RestApi * Bottom recycler view now shows the routes for a selected bus stop marker

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,8 @@
     <!--    UI Labels   -->
     <string name="generic_error">Sorry. An error occurred.</string>
     <string name="no_bus_stops_in_that_area">Sorry. There are no bus stops in that area.</string>
+    <string name="error_loading_bus_stops">Sorry. An error occurred while loading the bus stops in that area.</string>
+    <string name="error_loading_bus_routes">Sorry. An error occurred while loading the bus routes.</string>
     <string name="try_again">Try Again</string>
 
 </resources>
