Changed the tab names. Some leftover debug code in there that will get pulled out later.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,8 +24,8 @@
     <string name="location_permission_denied">This app uses location services to find bus stops near your location. If the permission has been permanently denied, it can be enabled from System Settings &gt; Apps &gt; \'PegCityTransit\'.</string>
 
     <!-- Bottom Tabs -->
-    <string name="stops">Stops</string>
-    <string name="timetables">Timetables</string>
+    <string name="map">Map</string>
+    <string name="my_stops">My Stops</string>
     <string name="routes">Routes</string>
 
     <!--    UI Labels   -->
