* Some work on the schedule activity. * Fixed bugs with schedule times. * Various styling. * Bumped minSdk to 16.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,9 @@
     <string name="routes">Routes</string>
 
     <!--    UI Labels   -->
+    <string name="arriving_in">Arriving in {time}</string>
+    <string name="departing_in">Departing in {time}</string>
+
     <string name="generic_error">Sorry. An error occurred.</string>
     <string name="no_bus_stops_in_that_area">Sorry. There are no bus stops in that area.</string>
     <string name="error_loading_bus_stops">Sorry. An error occurred while loading the bus stops in that area.</string>
