--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="error_loading_bus_stops">Sorry. An error occurred while loading the bus stops in that area.</string>
     <string name="error_loading_bus_routes">Sorry. An error occurred while loading the bus routes.</string>
     <string name="error_loading_schedule">Sorry. An error occurred while loading the schedule for that bus stop.</string>
+    <string name="error_finding_location">Unable to find your location.</string>
 
     <string name="try_again">Try Again</string>
 
