* Cleaned out some stuff that is no longer used (still more to get rid of btw). * Added bottom sheet modal for viewing bus routes. * Re-added ability to view all bus stop for a bus route.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="routes">Routes</string>
 
     <!--    UI Labels   -->
+    <string name="select_a_bus_route">Select a Bus Route</string>
     <string name="departs_in">Departs in {time} {time_unit}</string>
     <string name="due">Due</string>
 
