* Added a title to the “24 hour time” setting.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,7 @@
     <string name="loading_message_finding_schedule">Finding Schedule&#8230;</string>
 
     <string name="use_24_hour_time">Use 24-hour time</string>
+    <string name="bus_stop_schedules">Bus Stop Schedules</string>
     <string name="report_issue_blurb">Notice an issue with the app? Send a bug report so it can be looked into (please be as descriptive as possible).</string>
     <string name="report_issue">Report an Issue</string>
     <string name="rate_blurb">Love it? Hate it? Rate it!</string>
