* Forgot less than v21 button. * Handling Play Services not installed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,6 +68,7 @@
     <string name="error_loading_bus_routes">Sorry. An error occurred while loading the bus routes.</string>
     <string name="error_loading_schedule">Sorry. An error occurred while loading the schedule for that bus stop.</string>
     <string name="error_finding_location">Unable to find your location.</string>
+    <string name="error_google_play_services_missing">Sorry. You need Google Play Services installed to use this app.</string>
 
     <string name="no_bus_stops_in_that_area">Sorry. There are no bus stops in that area.</string>
     <string name="no_saved_stops">You don\'t seem to have any saved stops yet.</string>
