--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="settings_toolbar_title">{md-settings} Settings</string>
     <string name="departs_in">Departs in {time} {time_unit}</string>
     <string name="due">Due</string>
+    <string name="checked_at">Checked at {time}.</string>
 
     <string name="on_time">On Time</string>
     <string name="late">Late</string>
@@ -49,6 +50,8 @@
 
     <string name="use_24_hour_time">Use 24-hour time</string>
     <string name="bus_stop_schedules">Bus Stop Schedules</string>
+    <string name="map">Map</string>
+    <string name="search_radius">Search Radius (meters)</string>
     <string name="report_issue_blurb">Notice an issue with the app? Send a bug report so it can be looked into (please be as descriptive as possible).</string>
     <string name="report_issue">Report an Issue</string>
     <string name="rate_blurb">Love it? Hate it? Rate it!</string>
@@ -56,6 +59,14 @@
 
     <string name="feedback_email">pegcitytransit@gmail.com</string>
     <string name="feedback_email_subject">App Issue</string>
+
+    <string-array name="map_search_radius">
+        <item>100</item>
+        <item>200</item>
+        <item>300</item>
+        <item>400</item>
+        <item>500</item>
+    </string-array>
 
     <!-- Cache keys -->
     <string name="cache_key_all_routes">ALL_ROUTES</string>
