--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,8 @@
     <string name="settings">Settings</string>
 
     <!--    UI Labels   -->
+    <string name="stop_search_hint">Search stops by street, number, or landmark</string>
+    <string name="bus_route_empty_state">Tap here to select a bus route</string>
     <string name="select_a_bus_route">{md-directions-bus} Select a Bus Route</string>
     <string name="settings_toolbar_title">{md-settings} Settings</string>
     <string name="departs_in">Departs in {time} {time_unit}</string>
