* Added headers cells to stop schedule for bus route filter and list title. Going to refactor this right now again though. * ORIENTATION CHANGE NEEDS FIX!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,8 @@
     <string name="departs_in">Departs in {time} {time_unit}</string>
     <string name="due">Due</string>
     <string name="checked_at">Checked at {time}</string>
+    <string name="filter_by_route">Filter by Route</string>
+    <string name="schedule">Schedule</string>
 
     <string name="on_time">On Time</string>
     <string name="late">Late</string>
