* Added bus route filter section in scheduled stops list. Still need to wire up functionality though). * Updated gradle again.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="settings_toolbar_title">{md-settings} Settings</string>
     <string name="departs_in">Departs in {time} {time_unit}</string>
     <string name="due">Due</string>
-    <string name="checked_at">Checked at {time}</string>
+    <string name="checked_at">Schedule (Checked at {time})</string>
     <string name="filter_by_route">Filter by Route</string>
     <string name="schedule">Schedule</string>
 
